# ezlang

./: README.md  ezlang.cabal
src/: Main.hs
src/Ezlang/: Eval.hs  Lexer.x  Parser.y  Repl.hs  Types.hs
tests/: Test.hs
tests/input/: sh0.cmd.out  sh1.cmd.out  sh5.cmd.out  sh6.cmd.out  t8.hs
